<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    style="@style/activityStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".libraryservice.activities.MainActivity">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="125dp"
        android:layout_marginTop="@dimen/marginsize"
        app:layout_constraintBottom_toTopOf="@+id/gamename"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutMain"
        app:srcCompat="@drawable/download" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gamename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/hintUserName"
        android:paddingHorizontal="@dimen/paddingHorizontal"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/gameNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/marginsize"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hintPassword"
        android:paddingHorizontal="@dimen/paddingHorizontal"
        app:layout_constraintTop_toBottomOf="@id/gamename"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/marginsize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/myButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="testClick"
        android:paddingHorizontal="@dimen/paddingVertical"
        android:text="@string/loginButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="540dp"
        android:text="@string/modeSwitchText"
        android:onClick="onSwitchMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
